# KingOfTheHill-KI

./:  main.cpp  .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  end.cpp  end.h  game.cpp  game.h  gameserver.h  hikaru.cpp  hikaru.h  move.cpp  move.h  util.cpp  util.h
src/:  main.cpp  CMakeLists.txt  board.cpp  board.h  end.cpp  end.h  game.cpp  game.h  gameserver.cpp  gameserver.h  generators.h  hash.cpp  hash.h  hikaru.cpp  hikaru.h  main.cpp  monteCarloTree.cpp  monteCarloTree.h  move.cpp  move.h  moveMaps.h  pieceSquareTable.h  scoredMove.cpp  scoredMove.h  transpositionTable.cpp  transpositionTable.h  util.cpp  util.h
test/: BoardTest.cpp  EndTest.cpp  MoveTest.cpp
